[package]
name = "tomb-crypt"
license = "MIT"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "^0.1"
serde = "^1.0"
jwt-simple = "^0.11"
rand = "^0.8"
p384 = { version = "^0.13", features = ["arithmetic", "alloc", "pkcs8", "pem"] }
rand_core = "^0.6"
base64ct = "^1.6"
hkdf = "^0.12"
blake3 = "^1.4"
sha2 = "^0.10"
aes-gcm = "^0.10"
chrono = "^0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "^1", default-features = false, features = ["rt", "rt-multi-thread", "test-util", "tokio-macros", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "^0.2", features = ["js"] }
console_error_panic_hook = "^0.1"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "^0.3"
